# MediaEngine

./: .clang-format  .gitignore  .gitmodules  README.md
application/MediaServer/: CMakeLists.txt  snymediaserver.cc
application/MediaServer/src/: snymediaserver.cc
application/RTMP-Proxy/: CMakeLists.txt  config.json  el.conf
application/RTMP-Proxy/conf/: el.conf
application/RTMP-Proxy/src/: main.cc  snymultirtmppublish.cc  snymultirtmppublish.h  snyrtmpproxy.cc  snyrtmpproxy.h  snyrtmpproxyconf.cc  snyrtmpproxyconf.h
application/rtmp_proxy/: CMakeLists.txt  README.md
application/rtmp_proxy/conf/: config.json  el.conf
application/rtmp_proxy/conf/ssl/: dh2048.pem  server.crt  server.csr  server.key
application/rtmp_proxy/src/: main.cc  snymultirtmppublish.cc  snymultirtmppublish.h  snyrtmpproxy.cc  snyrtmpproxy.h  snyrtmpproxyconf.cc  snyrtmpproxyconf.h
common/: CMakeLists.txt
common/3rd/: build.Linux.sh  build.macOS.sh  build.windows.txt
common/3rd/download/: build_bento4.bat  build_libuv.bat  build_openssl.bat  build_uvcpp.bat
common/3rd/patch/Bento4/: CMakeLists.txt
common/3rd/patch/easyloggingpp/: CMakeLists.txt
common/3rd/patch/uv-cpp/: CMakeLists.txt
common/src/core/: assert.h  bit_reader.h  bit_writer.cpp  bit_writer.h  bitstream.cpp  bitstream.h  byte_io.h  byte_ordering.h  byte_stream.cpp  byte_stream.h  converter.h  data.cpp  data.h  datastream.cpp  datastream.h  dump_utilities.cpp  dump_utilities.h  event.cpp  event.h  log.h  memory_utilities.h  memory_view.h  ovdata_structure.h  queue.cpp  queue.h  semaphore.cpp  semaphore.h  snyconfig.h  snyconstants.h  snydatabuffer.cc  snydatabuffer.h  snyeasylogging.cc  snyeasylogging.h  snygpacmediainfo.cc  snygpacmediainfo.h  snygpacmp4.cc  snygpacmp4.h  snygpacmp4track.cc  snygpacmp4track.h  snyhlsconstants.h  (+24 more)
common/src/core/socket/: sny_connection.cpp  sny_connection.h  sny_connection_callback.h  sny_connection_config.cpp  sny_connection_config.h  sny_connection_manager.cpp  sny_connection_manager.h  sny_connection_manager_interface.h  sny_connection_plain.cpp  sny_connection_plain.h  sny_connection_ssl.cpp  sny_connection_ssl.h
common/src/media/: aac_utils.cpp  aac_utils.h  audio_track.cpp  audio_track.h  common_types.h  ffmpeg_helper.cpp  ffmpeg_helper.h  media_buffer.h  media_common.cpp  media_common.h  media_extradata.h  media_sample.cpp  media_sample.h  media_track.cpp  media_track.h  media_type.h  rtmp_writer.cpp  rtmp_writer.h  snyaudiofunction.cc  snyaudiofunction.h  snydemuxer.cc  snydemuxer.h  snydemuxerhelper.cc  snydemuxerhelper.h  snyffmpeg.cc  snyffmpeg.h  snyidemuxer.h  snymediafunction.cc  snymediafunction.h  snymediainfo.cc  snymediainfo.h  snymediasample.cc  snymediasample.h  snymediatrack.cc  snymediatrack.h  snymediatype.cc  snymediatype.h  snympeg2ts.cc  snympeg2ts.h  video_track.cpp  (+1 more)
common/src/media/bitstream/aac/: aac.h  aac_adts.cpp  aac_adts.h  aac_bitstream_analyzer.h  aac_converter.cpp  aac_converter.h  aac_latm_to_adts.cpp  aac_latm_to_adts.h  aac_specific_config.cpp  aac_specific_config.h  snyaaclatmtoadts.cc  snyaaclatmtoadts.h
common/src/media/bitstream/h264/: h264.h  h264_avcc_to_annexb.cpp  h264_avcc_to_annexb.h  h264_bitstream_analyzer.cpp  h264_bitstream_analyzer.h  h264_converter.cpp  h264_converter.h  h264_decoder_configuration_record.cpp  h264_decoder_configuration_record.h  h264_nal_unit_types.cpp  h264_nal_unit_types.h  h264_parser.cpp  h264_parser.h  h264_slice_types.cpp  h264_slice_types.h  h264_sps_pps_tracker.cpp  h264_sps_pps_tracker.h  snyh264avcctoannexb.cc  snyh264avcctoannexb.h
common/src/media/bitstream/h265/: h265_converter.cpp  h265_converter.h  h265_parser.cpp  h265_parser.h  h265_types.h
common/src/media/bitstream/nalu/: nal_unit_bitstream_parser.cpp  nal_unit_bitstream_parser.h  nal_unit_fragment_header.cpp  nal_unit_fragment_header.h  nal_unit_splitter.cpp  nal_unit_splitter.h
common/src/media/demux/: demux.cpp  demux.h  demux_factory.cpp  demux_factory.h  demux_ffmpeg.cpp  demux_ffmpeg.h
common/src/media/flv/: flv_parser.cpp  flv_parser.h
common/src/media/mux/: snyimuxer.h  snymuxerImplffmpeg.cpp  snymuxerImplffmpeg.h  snymuxerImplmpegts.cc  snymuxerImplmpegts.h  snymuxerImplmpegtshelper.cc  snymuxerImplmpegtshelper.h  snymuxerfactory.cc  snymuxerfactory.cpp  snymuxerfactory.h
common/src/media/rtmp/: amf_document.cpp  amf_document.h  rtmp_chunk_parser.cpp  rtmp_chunk_parser.h  rtmp_datastructure.h  rtmp_define.h  rtmp_export_chunk.cpp  rtmp_export_chunk.h  rtmp_handshake.cpp  rtmp_handshake.h  rtmp_import_chunk.cpp  rtmp_import_chunk.h  rtmp_mux_util.cpp  rtmp_mux_util.h
common/src/media/rtmp/helper/: audio_track.h  bit_reader.h  common_types.h  converter.h  log.h  media_buffer.h  media_extradata.h  media_track.cpp  media_type.h  url.cpp  url.h
common/src/media/rtmp_stream/: rtmp_stream.cpp  rtmp_stream.h
common/src/source/: snysourcecallback.h
common/src/source/rtmp/: rtmp_stream.cpp  rtmp_stream.h  sny_rtmp_server.cc  sny_rtmp_server.h  snyrtmpserver.cc  snyrtmpserver.h
common/src/utils/: md5.cc  md5.h
