cmake_minimum_required(VERSION 3.1)
PROJECT(snycommon)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED TRUE)

IF( NOT CMAKE_BUILD_TYPE )
   SET( CMAKE_BUILD_TYPE debug ... FORCE )
ENDIF()

SET(BUILD_MODE_DIR ".")
IF (WIN32)
  IF(CMAKE_BUILD_TYPE MATCHES debug)
    message("Debug build.")
    SET(BUILD_MODE_DIR "Debug")
  ELSEIF(CMAKE_BUILD_TYPE MATCHES release)
    message("Release build.")
    SET(BUILD_MODE_DIR "Release")
  ELSE()
    MESSAGE(FATAL_ERROR  "Unkown Build Type, It should be either debug or release")
  ENDIF()
ENDIF()

# Variables
SET(SOURCE_SRC   ${CMAKE_CURRENT_SOURCE_DIR}/src)

#OpenSSL
SET(OPENSSL_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/3rd/build/openssl/${BUILD_MODE_DIR})
find_package(OpenSSL REQUIRED)
#Bento4
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/3rd/build/Bento4/${BUILD_MODE_DIR}/include/C++/MetaData)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/3rd/build/Bento4/${BUILD_MODE_DIR}/include/C++/Crypto)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/3rd/build/Bento4/${BUILD_MODE_DIR}/include/C++/Core)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/3rd/build/Bento4/${BUILD_MODE_DIR}/include/C++/Codecs)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/3rd/build/Bento4/lib/${BUILD_MODE_DIR})
#rapidjson
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/3rd/build/rapidjson/include)
#easyloggingpp
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/3rd/build/easyloggingpp/include COMMON_SOURCES)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/3rd/build/easyloggingpp/include)
ADD_DEFINITIONS(-DAUTO_INITIALIZE_EASYLOGGINGPP)
ADD_DEFINITIONS(-DELPP_THREAD_SAFE)
#libuv
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/3rd/build/libuv/${BUILD_MODE_DIR}/include)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/3rd/build/libuv/${BUILD_MODE_DIR}/lib)
#uv-cpp
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/3rd/build/uv-cpp/${BUILD_MODE_DIR}/include)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/3rd/build/uv-cpp/${BUILD_MODE_DIR}/lib)
#ffmpeg
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/3rd/build/ffmpeg/include)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/3rd/build/ffmpeg/lib)
#gpac
#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/3rd/build/gpac/include)
#LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/3rd/build/gpac/lib)
#jwt
#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/3rd/git-submodule/jwt-cpp/include)
ADD_DEFINITIONS(-D_HAS_STD_BYTE=0)
ADD_DEFINITIONS(-DWIN32_LEAN_AND_MEAN)
ADD_DEFINITIONS(-DELPP_WINSOCK2)
ADD_DEFINITIONS(-D__STDC_CONSTANT_MACROS)#ffmpeg need this
ADD_DEFINITIONS(-DELPP_NO_DEFAULT_LOG_FILE)

INCLUDE_DIRECTORIES(${SOURCE_SRC})

AUX_SOURCE_DIRECTORY(${SOURCE_SRC}/core COMMON_SOURCES)
AUX_SOURCE_DIRECTORY(${SOURCE_SRC}/utils COMMON_SOURCES)
AUX_SOURCE_DIRECTORY(${SOURCE_SRC}/media COMMON_SOURCES)
AUX_SOURCE_DIRECTORY(${SOURCE_SRC}/media/flv COMMON_SOURCES)
AUX_SOURCE_DIRECTORY(${SOURCE_SRC}/media/mux COMMON_SOURCES)
AUX_SOURCE_DIRECTORY(${SOURCE_SRC}/media/rtmp COMMON_SOURCES)
AUX_SOURCE_DIRECTORY(${SOURCE_SRC}/media/bitstream/nalu COMMON_SOURCES)
AUX_SOURCE_DIRECTORY(${SOURCE_SRC}/media/bitstream/h264 COMMON_SOURCES)
AUX_SOURCE_DIRECTORY(${SOURCE_SRC}/media/bitstream/h265 COMMON_SOURCES)
AUX_SOURCE_DIRECTORY(${SOURCE_SRC}/media/bitstream/aac COMMON_SOURCES)
AUX_SOURCE_DIRECTORY(${SOURCE_SRC}/media/transcode COMMON_SOURCES)
AUX_SOURCE_DIRECTORY(${SOURCE_SRC}/media/transcode/codec COMMON_SOURCES)
AUX_SOURCE_DIRECTORY(${SOURCE_SRC}/media/transcode/filter COMMON_SOURCES)
AUX_SOURCE_DIRECTORY(${SOURCE_SRC}/source/rtmp COMMON_SOURCES)

ADD_LIBRARY(snycommon STATIC ${COMMON_SOURCES})
TARGET_LINK_LIBRARIES(snycommon OpenSSL::SSL)
TARGET_LINK_LIBRARIES(snycommon OpenSSL::Crypto)
TARGET_LINK_LIBRARIES(snycommon Bento4)
TARGET_LINK_LIBRARIES(snycommon uv_cpp)
TARGET_LINK_LIBRARIES(snycommon avcodec)
TARGET_LINK_LIBRARIES(snycommon avfilter)
TARGET_LINK_LIBRARIES(snycommon avformat)
TARGET_LINK_LIBRARIES(snycommon avutil)