cmake_minimum_required(VERSION 3.1)
PROJECT(streamingnology_app_mediaserver)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED TRUE)

set(CMAKE_MACOSX_RPATH 1)
set(CMAKE_SKIP_BUILD_RPATH FALSE)
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

# Variables
SET(MEDIASERVER_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(COMMON ${MEDIASERVER_DIR}/../../common)
SET(COMMON_SRC ${MEDIASERVER_DIR}/../../common/src)
SET(THIRD_BUILD_DIR ${MEDIASERVER_DIR}/../../common/3rd/build)

#Bento4
INCLUDE_DIRECTORIES(${THIRD_BUILD_DIR}/Bento4/include/C++/MetaData)
INCLUDE_DIRECTORIES(${THIRD_BUILD_DIR}/Bento4/include/C++/Crypto)
INCLUDE_DIRECTORIES(${THIRD_BUILD_DIR}/Bento4/include/C++/Core)
INCLUDE_DIRECTORIES(${THIRD_BUILD_DIR}/Bento4/include/C++/Codecs)
INCLUDE_DIRECTORIES(${THIRD_BUILD_DIR}/Bento4/include/C++/Adapters)
INCLUDE_DIRECTORIES(${THIRD_BUILD_DIR}/Bento4/include/C++)
LINK_DIRECTORIES(${THIRD_BUILD_DIR}/Bento4/lib)
#OpenSSL
SET(OPENSSL_ROOT_DIR ${THIRD_BUILD_DIR}/openssl)
FIND_PACKAGE(OpenSSL REQUIRED)
#rapidjson
INCLUDE_DIRECTORIES(${THIRD_BUILD_DIR}/rapidjson/include)
#easyloggingpp
INCLUDE_DIRECTORIES(${THIRD_BUILD_DIR}/easyloggingpp/include)
LINK_DIRECTORIES(${THIRD_BUILD_DIR}/easyloggingpp/lib)
#libuv
INCLUDE_DIRECTORIES(${THIRD_BUILD_DIR}/libuv/include)
LINK_DIRECTORIES(${THIRD_BUILD_DIR}/libuv/lib)
#uv-cpp
INCLUDE_DIRECTORIES(${THIRD_BUILD_DIR}/uv-cpp/include)
LINK_DIRECTORIES(${THIRD_BUILD_DIR}/uv-cpp/lib)
#gpac
#INCLUDE_DIRECTORIES(${THIRD_BUILD_DIR}/gpac/include)
#LINK_DIRECTORIES(${THIRD_BUILD_DIR}/gpac/lib)
#jwt
#INCLUDE_DIRECTORIES(${THIRD_BUILD_DIR}/common/3rd/git-submodule/jwt-cpp/include)

INCLUDE_DIRECTORIES(${MEDIASERVER_DIR}/src)
INCLUDE_DIRECTORIES(${COMMON_SRC})

ADD_SUBDIRECTORY(${COMMON} ${COMMON}/build)

# MediaServer 
AUX_SOURCE_DIRECTORY(${MEDIASERVER_DIR}/src MEDIASERVER_SOURCES)
AUX_SOURCE_DIRECTORY(${MEDIASERVER_DIR}/src/mediaserver MEDIASERVER_SOURCES)

ADD_EXECUTABLE(MediaServer ${MEDIASERVER_SOURCES})
TARGET_LINK_LIBRARIES(MediaServer OpenSSL::SSL)
TARGET_LINK_LIBRARIES(MediaServer OpenSSL::Crypto)
TARGET_LINK_LIBRARIES(MediaServer uv pthread)
TARGET_LINK_LIBRARIES(MediaServer uv_cpp)
TARGET_LINK_LIBRARIES(MediaServer snycommon)
